<resources>
    <string name="app_name">RaceLogic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_race_logic">Race Logic</string>
    <string name="nav_statistic">Статистика</string>
    <string name="zero">0</string>
    <string name="off">Off</string>
    <string name="speed">Скорость</string>
    <string name="time">Время</string>
    <string name="boost">Разгон</string>
    <string name="pref_category_settings_speed">Измерение скорости(с, по)</string>
    <string name="pref_screen_speed_from">Скорость начала отсчета</string>
    <string name="pref_screen_speed_to">Скорость начала отсчета</string>
    <string name="pref_choose_speed_from">Выберите скорость начала отсчета</string>
    <string name="pref_choose_speed_to">Выберите скорость окончания отсчета</string>
    <string name="checkbox_mutable_speed">Настраиваемые параметры скорости</string>
    <string name="toast_fail_selected_speed_to">Изменена верхняя граница на 250 км/час</string>
    <string name="toast_fail_selected_speed_from">Изменена начальная граница на 0 км/час</string>
    <string name="max_speed">250 км/час</string>
    <string name="min_speed">0 км/час</string>
    <string name="default_speed">100 км/час</string>
    <string name="max_speed_value">250</string>
    <string name="min_speed_value">0</string>
    <string name="default_speed_value">100</string>
    <string name="reset_speed">Сброс скорости по умолчанию(0-100)</string>


    <string-array name="entry_values_speed_from">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>120</item>
        <item>150</item>
        <item>200</item>
    </string-array>

    <string-array name="entries_speed_from">
        <item>0 км/час</item>
        <item>10 км/час</item>
        <item>20 км/час</item>
        <item>30 км/час</item>
        <item>40 км/час</item>
        <item>50 км/час</item>
        <item>60 км/час</item>
        <item>70 км/час</item>
        <item>80 км/час</item>
        <item>90 км/час</item>
        <item>100 км/час</item>
        <item>120 км/час</item>
        <item>150 км/час</item>
        <item>200 км/час</item>
    </string-array>

    <string-array name="entry_values_speed_to">


        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>120</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
    </string-array>

    <string-array name="entries_speed_to">
        <item>40 км/час</item>
        <item>50 км/час</item>
        <item>60 км/час</item>
        <item>70 км/час</item>
        <item>80 км/час</item>
        <item>90 км/час</item>
        <item>100 км/час</item>
        <item>120 км/час</item>
        <item>150 км/час</item>
        <item>200 км/час</item>
        <item>250 км/час</item>
    </string-array>
</resources>
