<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceCategory
        android:title="@string/pref_category_settings_speed"
        android:key="pref_key_settings_speed">


        <ListPreference
            android:key="but_list_speed_from"
            android:summary="%s"
            android:title="@string/pref_choose_speed_from"
            android:entryValues="@array/entry_values_speed_from"
            android:entries="@array/entries_speed_from"
            android:defaultValue="0"
            >

        </ListPreference>

        <ListPreference
            android:key="but_list_speed_to"
            android:summary="%s"
            android:title="@string/pref_choose_speed_to"
            android:entryValues="@array/entry_values_speed_to"
            android:entries="@array/entries_speed_to"
            android:defaultValue="100"

            >

        </ListPreference>

        <Preference
            android:key="but_reset_speed"
            android:title="@string/reset_speed"

            />



    </PreferenceCategory>



</PreferenceScreen>